--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "require": "^2.4.20",
     "rfdc": "^1.3.1",
     "uuid": "^9.0.1"
